# routes/indexRouter.js
@@ -3,13 +3,13 @@ const router = express.Router();
 
 const holaService = require("./holaService").create();
 
-router.get("/", (req, res) => {
+router.get("/holamundo", (req, res) => {
   // #swagger.summary = 'Devuelve un saludo al mundo'
   const saludo = holaService.hola();
   return res.json(saludo);
 });
 
-router.post("/", (req, res) => {
+router.post("/hola", (req, res) => {
   // #swagger.summary = 'Devuelve un saludo a la persona indicada'
   const nombre = req.body.nombre;
   const saludo = holaService.hola(nombre);
